--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
 		</div>
 		<div id="footer">
 			<div class="about">
-				<p class="author-name">Tem 5</p>
+				<p class="author-name">Team 5</p>
 				<p class="author-last-update">Lastest update : 29/10/2021 at
 					16:05PM</p>
 			</div>
