add slider, toast message

--- a/Cart.html
+++ b/Cart.html
@@ -47,7 +47,7 @@
 				</ul>
 			</div>
 			<form method="get" action="#" class="search">
-				<input type="text" name="book_name" placeholder="Book name" id="search-book-name">
+				<input type="text" name="book_name" placeholder="Book name" id="search-product-name">
 				<input type="submit" value="Search" id="submit-button">
 			</form>
 
