add product page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<input type="submit" value="Tìm kiếm" id="submit-button">
 			</form>
 
-			<div onclick="window.open('#','_self')" class="cart">
+			<div onclick="window.open('/Cart.html','_self')" class="cart">
 				<div class="quantity">9</div>
 				<i class="ti-shopping-cart cart-icon"></i>
 			</div>
@@ -94,70 +94,70 @@
 		<h3 class="section-label">DANH MỤC</h3>
 		<div id="portfolio">
 			<div class="portfolio-row">
-				<a href="#" class="portfolio-item">
+				<a href="https://duc-ju.github.io/online-shop/ProductPage.html" class="portfolio-item">
 					<div class="portfolio-item-image">
 						<img src="https://cf.shopee.vn/file/687f3967b7c2fe6a134a2c11894eea4b_tn"
 							alt="" class="portfolio-item-img">
 					</div>
 					<h3 class="portfolio-name">Thời trang nam</h3>
 				</a>
-				<a href="#" class="portfolio-item">
+				<a href="https://duc-ju.github.io/online-shop/ProductPage.html" class="portfolio-item">
 					<div class="portfolio-item-image">
 						<img src="	https://cf.shopee.vn/file/75ea42f9eca124e9cb3cde744c060e4d_tn"
 							alt="" class="portfolio-item-img">
 					</div>
 					<h3 class="portfolio-name">Thời trang nữ</h3>
 				</a>
-				<a href="#" class="portfolio-item">
+				<a href="https://duc-ju.github.io/online-shop/ProductPage.html" class="portfolio-item">
 					<div class="portfolio-item-image">
 						<img src="	https://cf.shopee.vn/file/4540f87aa3cbe99db739f9e8dd2cdaf0_tn"
 							alt="" class="portfolio-item-img">
 					</div>
 					<h3 class="portfolio-name">Thời trang trẻ em</h3>
 				</a>
-				<a href="#" class="portfolio-item">
+				<a href="https://duc-ju.github.io/online-shop/ProductPage.html" class="portfolio-item">
 					<div class="portfolio-item-image">
 						<img src="https://cf.shopee.vn/file/c3f3edfaa9f6dafc4825b77d8449999d_tn"
 							alt="" class="portfolio-item-img">
 					</div>
 					<h3 class="portfolio-name">Laptop</h3>
 				</a>
-				<a href="#" class="portfolio-item">
+				<a href="https://duc-ju.github.io/online-shop/ProductPage.html" class="portfolio-item">
 					<div class="portfolio-item-image">
 						<img src="https://cf.shopee.vn/file/31234a27876fb89cd522d7e3db1ba5ca_tn"
 							alt="" class="portfolio-item-img">
 					</div>
 					<h3 class="portfolio-name">Điện thoại</h3>
 				</a>
-				<a href="" class="portfolio-item">
+				<a href="https://duc-ju.github.io/online-shop/ProductPage.html" class="portfolio-item">
 					<div class="portfolio-item-image">
 						<img src="https://hanoicomputercdn.com/media/product/59146_may_tinh_bang_apple_ipad_pro_12_9_m1_bac_2021_0000_1.jpg"
 							alt="" class="portfolio-item-img">
 					</div>
 					<h3 class="portfolio-name">Tablet</h3>
 				</a>
-				<a href="#" class="portfolio-item">
+				<a href="https://duc-ju.github.io/online-shop/ProductPage.html" class="portfolio-item">
 					<div class="portfolio-item-image">
 						<img src="https://cf.shopee.vn/file/36013311815c55d303b0e6c62d6a8139_tn"
 							alt="" class="portfolio-item-img">
 					</div>
 					<h3 class="portfolio-name">Sách</h3>
 				</a>
-				<a href="#" class="portfolio-item">
+				<a href="https://duc-ju.github.io/online-shop/ProductPage.html" class="portfolio-item">
 					<div class="portfolio-item-image">
 						<img src="	https://cf.shopee.vn/file/74ca517e1fa74dc4d974e5d03c3139de_tn"
 							alt="" class="portfolio-item-img">
 					</div>
 					<h3 class="portfolio-name">Giày dép nam</h3>
 				</a>
-				<a href="#" class="portfolio-item">
+				<a href="https://duc-ju.github.io/online-shop/ProductPage.html" class="portfolio-item">
 					<div class="portfolio-item-image">
 						<img src="https://cf.shopee.vn/file/48630b7c76a7b62bc070c9e227097847_tn"
 							alt="" class="portfolio-item-img">
 					</div>
 					<h3 class="portfolio-name">Giày dép nữ</h3>
 				</a>
-				<a href="#" class="portfolio-item">
+				<a href="https://duc-ju.github.io/online-shop/ProductPage.html" class="portfolio-item">
 					<div class="portfolio-item-image">
 						<img src="https://product.hstatic.net/1000355922/product/sandal-tre-em-urban-quai-dan-sd2015-ghi__3__970269255729415193195b3f8b6e54b7.jpg"
 							alt="" class="portfolio-item-img">
@@ -175,9 +175,9 @@
 			<div class="sale-label">SẢN PHẨM GIẢM GIÁ</div>
 			<a href="#" class="label-direction">Xem tất cả >></a>
 		</h3>
-		<div id="sale" class="section-content">
+		<div id="sale" class="content-section">
 			<div class="row-item">
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="https://cf.shopee.vn/file/17f31c8384d188c1d0bf8bb60d6ac2d2"
@@ -199,7 +199,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="https://cf.shopee.vn/file/9443b8c9d25cd576615a9d499d6b131e"
@@ -220,7 +220,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -241,7 +241,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -262,7 +262,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -283,7 +283,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -314,7 +314,7 @@
 			</div>
 
 			<div class="row-item">
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -335,7 +335,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -356,7 +356,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -377,7 +377,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -398,7 +398,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -419,7 +419,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -459,7 +459,7 @@
 		</h3>
 		<div id="sale" class="section-content">
 			<div class="row-item">
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -480,7 +480,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -501,7 +501,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -522,7 +522,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -543,7 +543,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -564,7 +564,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -593,7 +593,7 @@
 
 			</div>
 			<div class="row-item">
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -614,7 +614,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -635,7 +635,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -656,7 +656,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -677,7 +677,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -698,7 +698,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -737,7 +737,7 @@
 		</h3>
 		<div id="sale" class="section-content">
 			<div class="row-item">
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -758,7 +758,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -779,7 +779,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -800,7 +800,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -821,7 +821,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -842,7 +842,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -872,7 +872,7 @@
 			</div>
 
 			<div class="row-item">
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -893,7 +893,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -914,7 +914,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -935,7 +935,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -956,7 +956,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
@@ -977,7 +977,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="#" class="item">
+				<a href="#" class="item item-col-2">
 					<div class="item-container">
 						<div class="item-image">
 							<img src="assets/photo/portfolio.png" alt="" class="item-img">
