--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<input type="submit" value="Tìm kiếm" id="submit-button">
 			</form>
 
-			<div onclick="window.open('/Cart.html','_self')" class="cart">
+			<div onclick="window.open('/online-shop/Cart.html','_self')" class="cart">
 				<div class="quantity">9</div>
 				<i class="ti-shopping-cart cart-icon"></i>
 			</div>
@@ -457,7 +457,7 @@
 			<div class="sale-label">SẢN PHẨM MỚI</div>
 			<a href="#" class="label-direction">Xem tất cả >></a>
 		</h3>
-		<div id="sale" class="section-content">
+		<div id="sale" class="content-section">
 			<div class="row-item">
 				<a href="#" class="item item-col-2">
 					<div class="item-container">
@@ -735,7 +735,7 @@
 		<h3 class="section-label">
 			<div class="sale-label">TẤT CẢ SẢN PHẨM</div>
 		</h3>
-		<div id="sale" class="section-content">
+		<div id="sale" class="content-section">
 			<div class="row-item">
 				<a href="#" class="item item-col-2">
 					<div class="item-container">
