--- a/ProductPage.html
+++ b/ProductPage.html
@@ -261,6 +261,10 @@
 							<a href="#">Giá tăng dần</a>
 							<a href="#">Giá giảm dần</a>
 						</div>
+						<div class="pagination-plus">
+							<a href="#" class="disable"><i class="fas fa-angle-left"></i></a>
+							<a href="#" class=""><i class="fas fa-angle-right"></i></a>
+						</div>
 					</div>
 					<div class="section-content">
 						<div class="row-item">
@@ -580,8 +584,21 @@
 						</div>
 					</div>
 				</div>
+				<div class="pagination">
+					<div class="pagination-container">
+						<ul>
+							<li><a href="#"><i class="fas fa-angle-left"></i></a></li>
+							<li class="active"><a href="#">1</a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a href="#">4</a></li>
+							<li><a>. . .</a></li>
+							<li><a href="#"><i class="fas fa-angle-right"></i></a></li>
+						</ul>
+					</div>
+				</div>
 		</section>
-
+		
 
 
 	</div>
