--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 							Đức Ju
 						</a>
 					</li>
-					<li class="control-item actived"><a href="#">Trang chủ</a></li>
+					<li class="control-item active"><a href="https://duc-ju.github.io/online-shop/">Trang chủ</a></li>
 					<li class="control-item" id="logout"><a href="#">Đăng xuất</a></li>
 
 				</ul>
 			</div>
 
-			<a href="#" class="brand-name">
+			<a href="https://duc-ju.github.io/online-shop/" class="brand-name">
 				<div class="brand-logo"><img src="assets/photo/logo.png" alt="" class=""></div>
 			</a>
 
@@ -171,9 +171,9 @@
 
 		</div>
 		<!-- Best item on sale -->
-		<h3 class="section-label">
+		<h3 class="section-label mt-32">
 			<div class="sale-label">SẢN PHẨM GIẢM GIÁ</div>
-			<a href="#" class="label-direction">Xem tất cả >></a>
+			<a href="#" class="label-direction">Xem tất cả   <i class="fas fa-angle-right"></i></a>
 		</h3>
 		<div id="sale" class="content-section">
 			<div class="row-item">
@@ -453,9 +453,9 @@
 		</div>
 
 		<!-- New item -->
-		<h3 class="section-label">
+		<h3 class="section-label mt-32">
 			<div class="sale-label">SẢN PHẨM MỚI</div>
-			<a href="#" class="label-direction">Xem tất cả >></a>
+			<a href="#" class="label-direction">Xem tất cả   <i class="fas fa-angle-right"></i></a>
 		</h3>
 		<div id="sale" class="content-section">
 			<div class="row-item">
@@ -732,7 +732,7 @@
 		</div>
 
 		<!-- Best item on sale -->
-		<h3 class="section-label">
+		<h3 class="section-label mt-32">
 			<div class="sale-label">TẤT CẢ SẢN PHẨM</div>
 		</h3>
 		<div id="sale" class="content-section">
@@ -1013,11 +1013,61 @@
 			<a href="#" class="button">Xem tất cả</a>
 		</div>
 		<div id="footer">
-			<div class="about">
-				<p class="author-name">Team 5</p>
-				<p class="author-last-update">Lastest update : 29/10/2021 at
-					16:05PM</p>
+			<div class="footer-container">
+				<div class="footer-section">
+					<h2>CHĂM SÓC KHÁCH HÀNG</h2>
+					<ul>
+						<li><a href="#">Trung Tâm Trợ Giúp</a></li>
+						<li><a href="#">Hướng Dẫn Mua Hàng</a></li>
+						<li><a href="#">Thanh Toán</a></li>
+						<li><a href="#">Vận Chuyển</a></li>
+						<li><a href="#">Trả Hàng & Hoàn Tiền</a></li>
+						<li><a href="#">Chăm Sóc Khách Hàng</a></li>
+						<li><a href="#">Chính Sách Bảo Hành</a></li>
+					</ul>
+				</div>
+				<div class="footer-section">
+					<h2>VỀ QUÁN QUEN</h2>
+					<ul>
+						<li><a href="#">Giới Thiệu Về Quán Quen Việt Nam</a></li>
+						<li><a href="#">Tuyển Dụng</a></li>
+						<li><a href="#">Chính sách bảo mật</a></li>
+						<li><a href="#">Chính hãng</a></li>
+						<li><a href="#">Chương trình tiếp thị liên kết</a></li>
+						<li><a href="#">Kênh quảng bá</a></li>
+						<li><a href="#">Liên hệ với truyền thông</a></li>
+					</ul>
+				</div>
+		
+				<div class="footer-section">
+					<h2>THANH TOÁN</h2>
+					<ul>
+						<li><a href="#">Visa</a></li>
+						<li><a href="#">MasterCard</a></li>
+						<li><a href="#">JCB</a></li>
+						<li><a href="#">CODE</a></li>
+						<li><a href="#">Trả Góp</a></li>
+					</ul>
+					<h2>ĐƠN VỊ VẬN CHUYỂN</h2>
+					<ul>
+						<li><a href="#">Giao Hàng Nhanh</a></li>
+						<li><a href="#">Giao hàng tiết kiệm</a></li>
+						<li><a href="#">Viettel Post</a></li>
+						<li><a href="#">Ninja Van</a></li>
+					</ul>
+				</div>
+		
+				<div class="footer-section">
+					<h2>THEO DÕI CHÚNG TÔI TRÊN</h2>
+					<ul>
+						<li><a href="#"><i class="fab fa-facebook-square"></i>   Facebook</a></li>
+						<li><a href="#"><i class="fab fa-instagram"></i> Instagram</a></li>
+						<li><a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+					</ul>
+				</div>
 			</div>
+			<div class="ruler-line">&nbsp</div>
+			<div id="footer-copyright">© 2021 Quán Quen. Tất cả các quyền được bảo lưu.</div>
 		</div>
 	</div>
 
