--- a/ProductPage.html
+++ b/ProductPage.html
@@ -37,13 +37,13 @@
 							Đức Ju
 						</a>
 					</li>
-					<li class="control-item actived"><a href="#">Trang chủ</a></li>
+					<li class="control-item actived"><a href="https://duc-ju.github.io/online-shop/">Trang chủ</a></li>
 					<li class="control-item" id="logout"><a href="#">Đăng xuất</a></li>
 
 				</ul>
 			</div>
 
-			<a href="#" class="brand-name">
+			<a href="https://duc-ju.github.io/online-shop/" class="brand-name">
 				<div class="brand-logo"><img src="assets/photo/logo.png" alt="" class=""></div>
 			</a>
 
@@ -61,6 +61,9 @@
 			</div>
 
 		</header>
+		<div class="mark-section">
+			<h2><i class="fas fa-bullhorn"></i>   Ngành hàng thời trang nam</h2>
+		</div>
 		<div class="content-section mt-16">
 			<!-- New item -->
 			<h3 class="section-label">
@@ -252,18 +255,21 @@
 			</div>
 			<div id="product">
 				<div class="product-container">
-					<div class="sort-direction">
-						<div class="sort-container">
-							<h3>Sắp xếp theo</h3>
-							<a href="#" class="active">Phổ biến</a>
-							<a href="#">Mới nhất</a>
-							<a href="#">Giảm giá tốt nhất</a>
-							<a href="#">Giá tăng dần</a>
-							<a href="#">Giá giảm dần</a>
-						</div>
-						<div class="pagination-plus">
-							<a href="#" class="disable"><i class="fas fa-angle-left"></i></a>
-							<a href="#" class=""><i class="fas fa-angle-right"></i></a>
+					<div class="sort-section">
+
+						<div class="sort-direction">
+							<div class="sort-container">
+								<h3>Sắp xếp theo</h3>
+								<a href="#" class="active">Phổ biến</a>
+								<a href="#">Mới nhất</a>
+								<a href="#">Giảm giá tốt nhất</a>
+								<a href="#">Giá tăng dần</a>
+								<a href="#">Giá giảm dần</a>
+							</div>
+							<div class="pagination-plus">
+								<a href="#" class="disable"><i class="fas fa-angle-left"></i></a>
+								<a href="#" class=""><i class="fas fa-angle-right"></i></a>
+							</div>
 						</div>
 					</div>
 					<div class="section-content">
@@ -428,6 +434,326 @@
 
 						</div>
 
+						<div class="row-item">
+							<a href="#" class="item item-col-2-4">
+								<div class="item-container">
+									<div class="item-image">
+										<img src="https://cf.shopee.vn/file/17f31c8384d188c1d0bf8bb60d6ac2d2"
+											alt="" class="item-img">
+									</div>
+									<div class="item-content">
+										<h2 class="item-name">Áo thun nam chất
+											lượng cao nhập khẩu chính
+											hãng
+										</h2>
+										<div class="item-old-price">106.000đ
+										</div>
+										<div class="item-info">
+											<div class="item-discount">50%
+												giảm</div>
+											<div
+												class="item-content-section">
+												<div class="item-price">
+													58.000đ</div>
+												<div
+													class="item-add-button">
+													Thêm vào giỏ
+													hàng
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+
+							<a href="#" class="item item-col-2-4">
+								<div class="item-container">
+									<div class="item-image">
+										<img src="assets/photo/portfolio.png"
+											alt="" class="item-img">
+									</div>
+									<div class="item-content">
+										<h2 class="item-name">Áo thun nam chất
+											lượng cao nhập khẩu chính
+											hãng
+										</h2>
+										<div class="item-old-price">106.000đ
+										</div>
+										<div class="item-info">
+											<div class="item-discount">50%
+												giảm</div>
+											<div
+												class="item-content-section">
+												<div class="item-price">
+													58.000đ</div>
+												<div
+													class="item-add-button">
+													Thêm vào giỏ
+													hàng
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+							<a href="#" class="item item-col-2-4">
+								<div class="item-container">
+									<div class="item-image">
+										<img src="assets/photo/portfolio.png"
+											alt="" class="item-img">
+									</div>
+									<div class="item-content">
+										<h2 class="item-name">Áo thun nam chất
+											lượng cao nhập khẩu chính
+											hãng
+										</h2>
+										<div class="item-old-price">106.000đ
+										</div>
+										<div class="item-info">
+											<div class="item-discount">50%
+												giảm</div>
+											<div
+												class="item-content-section">
+												<div class="item-price">
+													58.000đ</div>
+												<div
+													class="item-add-button">
+													Thêm vào giỏ
+													hàng
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+							<a href="#" class="item item-col-2-4">
+								<div class="item-container">
+									<div class="item-image">
+										<img src="assets/photo/portfolio.png"
+											alt="" class="item-img">
+									</div>
+									<div class="item-content">
+										<h2 class="item-name">Áo thun nam chất
+											lượng cao nhập khẩu chính
+											hãng
+										</h2>
+										<div class="item-old-price">106.000đ
+										</div>
+										<div class="item-info">
+											<div class="item-discount">50%
+												giảm</div>
+											<div
+												class="item-content-section">
+												<div class="item-price">
+													58.000đ</div>
+												<div
+													class="item-add-button">
+													Thêm vào giỏ
+													hàng
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+							<a href="#" class="item item-col-2-4">
+								<div class="item-container">
+									<div class="item-image">
+										<img src="assets/photo/portfolio.png"
+											alt="" class="item-img">
+									</div>
+									<div class="item-content">
+										<h2 class="item-name">Áo thun nam chất
+											lượng cao nhập khẩu chính
+											hãng
+										</h2>
+										<div class="item-old-price">106.000đ
+										</div>
+										<div class="item-info">
+											<div class="item-discount">50%
+												giảm</div>
+											<div
+												class="item-content-section">
+												<div class="item-price">
+													58.000đ</div>
+												<div
+													class="item-add-button">
+													Thêm vào giỏ
+													hàng
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+
+
+
+
+
+
+
+						</div>
+						<div class="row-item">
+							<a href="#" class="item item-col-2-4">
+								<div class="item-container">
+									<div class="item-image">
+										<img src="https://cf.shopee.vn/file/17f31c8384d188c1d0bf8bb60d6ac2d2"
+											alt="" class="item-img">
+									</div>
+									<div class="item-content">
+										<h2 class="item-name">Áo thun nam chất
+											lượng cao nhập khẩu chính
+											hãng
+										</h2>
+										<div class="item-old-price">106.000đ
+										</div>
+										<div class="item-info">
+											<div class="item-discount">50%
+												giảm</div>
+											<div
+												class="item-content-section">
+												<div class="item-price">
+													58.000đ</div>
+												<div
+													class="item-add-button">
+													Thêm vào giỏ
+													hàng
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+
+							<a href="#" class="item item-col-2-4">
+								<div class="item-container">
+									<div class="item-image">
+										<img src="assets/photo/portfolio.png"
+											alt="" class="item-img">
+									</div>
+									<div class="item-content">
+										<h2 class="item-name">Áo thun nam chất
+											lượng cao nhập khẩu chính
+											hãng
+										</h2>
+										<div class="item-old-price">106.000đ
+										</div>
+										<div class="item-info">
+											<div class="item-discount">50%
+												giảm</div>
+											<div
+												class="item-content-section">
+												<div class="item-price">
+													58.000đ</div>
+												<div
+													class="item-add-button">
+													Thêm vào giỏ
+													hàng
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+							<a href="#" class="item item-col-2-4">
+								<div class="item-container">
+									<div class="item-image">
+										<img src="assets/photo/portfolio.png"
+											alt="" class="item-img">
+									</div>
+									<div class="item-content">
+										<h2 class="item-name">Áo thun nam chất
+											lượng cao nhập khẩu chính
+											hãng
+										</h2>
+										<div class="item-old-price">106.000đ
+										</div>
+										<div class="item-info">
+											<div class="item-discount">50%
+												giảm</div>
+											<div
+												class="item-content-section">
+												<div class="item-price">
+													58.000đ</div>
+												<div
+													class="item-add-button">
+													Thêm vào giỏ
+													hàng
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+							<a href="#" class="item item-col-2-4">
+								<div class="item-container">
+									<div class="item-image">
+										<img src="assets/photo/portfolio.png"
+											alt="" class="item-img">
+									</div>
+									<div class="item-content">
+										<h2 class="item-name">Áo thun nam chất
+											lượng cao nhập khẩu chính
+											hãng
+										</h2>
+										<div class="item-old-price">106.000đ
+										</div>
+										<div class="item-info">
+											<div class="item-discount">50%
+												giảm</div>
+											<div
+												class="item-content-section">
+												<div class="item-price">
+													58.000đ</div>
+												<div
+													class="item-add-button">
+													Thêm vào giỏ
+													hàng
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+							<a href="#" class="item item-col-2-4">
+								<div class="item-container">
+									<div class="item-image">
+										<img src="assets/photo/portfolio.png"
+											alt="" class="item-img">
+									</div>
+									<div class="item-content">
+										<h2 class="item-name">Áo thun nam chất
+											lượng cao nhập khẩu chính
+											hãng
+										</h2>
+										<div class="item-old-price">106.000đ
+										</div>
+										<div class="item-info">
+											<div class="item-discount">50%
+												giảm</div>
+											<div
+												class="item-content-section">
+												<div class="item-price">
+													58.000đ</div>
+												<div
+													class="item-add-button">
+													Thêm vào giỏ
+													hàng
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</a>
+
+
+
+
+
+
+
+						</div>
 						<div class="row-item">
 							<a href="#" class="item item-col-2-4">
 								<div class="item-container">
@@ -605,12 +931,61 @@
 
 
 	<div id="footer">
-		<div class="about">
-			<p class="author-name">Team 5</p>
-			<p class="author-last-update">Lastest update : 29/10/2021 at
-				16:05PM</p>
+		<div class="footer-container">
+			<div class="footer-section">
+				<h2>CHĂM SÓC KHÁCH HÀNG</h2>
+				<ul>
+					<li><a href="#">Trung Tâm Trợ Giúp</a></li>
+					<li><a href="#">Hướng Dẫn Mua Hàng</a></li>
+					<li><a href="#">Thanh Toán</a></li>
+					<li><a href="#">Vận Chuyển</a></li>
+					<li><a href="#">Trả Hàng & Hoàn Tiền</a></li>
+					<li><a href="#">Chăm Sóc Khách Hàng</a></li>
+					<li><a href="#">Chính Sách Bảo Hành</a></li>
+				</ul>
+			</div>
+			<div class="footer-section">
+				<h2>VỀ QUÁN QUEN</h2>
+				<ul>
+					<li><a href="#">Giới Thiệu Về Quán Quen Việt Nam</a></li>
+					<li><a href="#">Tuyển Dụng</a></li>
+					<li><a href="#">Chính sách bảo mật</a></li>
+					<li><a href="#">Chính hãng</a></li>
+					<li><a href="#">Chương trình tiếp thị liên kết</a></li>
+					<li><a href="#">Kênh quảng bá</a></li>
+					<li><a href="#">Liên hệ với truyền thông</a></li>
+				</ul>
+			</div>
+	
+			<div class="footer-section">
+				<h2>THANH TOÁN</h2>
+				<ul>
+					<li><a href="#">Visa</a></li>
+					<li><a href="#">MasterCard</a></li>
+					<li><a href="#">JCB</a></li>
+					<li><a href="#">CODE</a></li>
+					<li><a href="#">Trả Góp</a></li>
+				</ul>
+				<h2>ĐƠN VỊ VẬN CHUYỂN</h2>
+				<ul>
+					<li><a href="#">Giao Hàng Nhanh</a></li>
+					<li><a href="#">Giao hàng tiết kiệm</a></li>
+					<li><a href="#">Viettel Post</a></li>
+					<li><a href="#">Ninja Van</a></li>
+				</ul>
+			</div>
+	
+			<div class="footer-section">
+				<h2>THEO DÕI CHÚNG TÔI TRÊN</h2>
+				<ul>
+					<li><a href="#"><i class="fab fa-facebook-square"></i>   Facebook</a></li>
+					<li><a href="#"><i class="fab fa-instagram"></i> Instagram</a></li>
+					<li><a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+				</ul>
+			</div>
 		</div>
-	</div>
+		<div class="ruler-line">&nbsp</div>
+		<div id="footer-copyright">© 2021 Quán Quen. Tất cả các quyền được bảo lưu.</div>
 	</div>
 
 
