add product detail page

--- a/Cart.html
+++ b/Cart.html
@@ -251,6 +251,7 @@
 		</div>
 
 		<div id="footer">
+			<div class="ruler-line">&nbsp</div>
 			<div class="footer-container">
 				<div class="footer-section">
 					<h2>CHĂM SÓC KHÁCH HÀNG</h2>
