update product page

--- a/Product.html
+++ b/Product.html
@@ -406,10 +406,10 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 			</div>
 		</section>
 		<h3 class="section-label mt-32">
-			<div class="sale-label">SẢN PHẨM GIẢM GIÁ</div>
+			<div class="sale-label">SẢN PHẨM TƯƠNG TỰ</div>
 			<a href="#" class="label-direction">Xem tất cả <i class="fas fa-angle-right"></i></a>
 		</h3>
-		<div class="content-section">
+		<div class="content-section mb-32">
 			<div class="row-item">
 				<a href="#" class="item item-col-2">
 					<div class="item-container">
